# japanize-kivy

./: MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
example/: greet.py
japanize_kivy/: __init__.py  japanizer.py
japanize_kivy/resources/ipaexg00401/: Readme_ipaexg00401.txt
tests/: test_import.py
