[metadata]
name = japanize-kivy
version = attr:japanize_kivy.__version__
author = momijiame
description = japanize kivy
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/momijiame/japanize_kivy
license = Apache License, Version 2.0
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
install_requires =
    kivy
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
testing =
    pytest

[options.packages.find]
exclude =
    tests
    examples

[tool:pytest]
addopts =
    -v

[flake8]
exclude =
    .git,
    .eggs,
    __pycache__,
    build,
    dist
max-complexity = 10
max-line-length = 99

[wheel]
universal = 0
